--- a/src/components/Basics/Restaurant.css
+++ b/src/components/Basics/Restaurant.css
@@ -6,8 +6,8 @@
   }
   
   html {
-    background: #faf7f2;
-    background-image: url(https://s3.postimg.org/s1n3ji1ur/paper_fibers_2_X.png);
+    background: linear-gradient(to right, #9796f0, #fbc7d4);
+    /* background-image: url(https://s3.postimg.org/s1n3ji1ur/paper_fibers_2_X.png); */
     box-sizing: border-box;
     font-family: "Lato", sans-serif;
     font-size: 14px;
