--- a/src/components/Basics/Restaurant.css
+++ b/src/components/Basics/Restaurant.css
@@ -51,6 +51,7 @@
     position: relative;
     box-shadow: 0 0 5px rgba(75, 75, 75, 0.07);
     z-index: 1;
+    border-radius: 10px;
   }
   
   .card-body {
